--- a/public/style/style.css
+++ b/public/style/style.css
@@ -127,7 +127,7 @@ header nav ul li a:hover {
     justify-content: center;
     align-items: center;
     padding: 20px 10%;
-    margin-top: 16%;
+    margin-top: 12%;
 }
 
 .form-container {
@@ -138,7 +138,7 @@ header nav ul li a:hover {
     padding: 20px 5%;
     background-color: #1b1b1b;
     border-radius: 20px;
-    margin-bottom: 25%;
+    margin-bottom: 20%;
 }
 
 .form-container h2 {
@@ -154,8 +154,17 @@ header nav ul li a:hover {
     border-radius: 5px;
     background-color: #333;
     color: white;
+}
+
+
+.form-container input:focus {
+    background-color: #9d9d9d;
+    color: #333;
+    border-radius: 11px;
+    outline: none;
 
 }
+
 
 .form-container button {
     width: 100%;
@@ -182,3 +191,76 @@ header nav ul li a:hover {
     margin-bottom: 0;
     width: 100%;
 }
+
+
+footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 10%;
+    color: rgba(179, 179, 179, 0.344);
+    transition: all 0.3s ease-in-out;
+}
+
+.social-medias {
+    margin-top: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.social-medias img {
+    width: 30px;
+    height: 30px;
+    margin: 0 10px;
+    transition: all 0.3s ease-in-out;
+}
+
+.social-medias img:hover {
+    transform: scale(1.2);
+    cursor: pointer;
+}
+
+.hamburger {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.hamburger div {
+    width: 25px;
+    height: 3px;
+    background-color: white;
+    margin: 4px;
+    transition: all 0.3s ease-in-out;
+}
+
+@media (max-width: 768px) {
+    header nav ul {
+        flex-direction: column;
+        position: absolute;
+        top: 60px;
+        left: -100%;
+        width: 100%;
+        background-color: #000000;
+        transition: all 0.3s ease-in-out;
+    }
+
+    header nav ul.show {
+        left: 0;
+    }
+
+    .hamburger {
+        display: flex;
+    }
+
+    .account-container {
+        flex-direction: column;
+        margin-top: 10px;
+    }
+}
+
+
