--- a/public/style/style.css
+++ b/public/style/style.css
@@ -247,8 +247,8 @@ footer {
     padding: 20px 10%;
     color: rgba(179, 179, 179, 0.344);
     transition: all 0.3s ease-in-out;
-    border-radius: 20px;
-    background-color: #333;
+    border-radius: 2px;
+    background-color: #000000;
 }
 
 
@@ -261,10 +261,14 @@ footer {
         flex-direction: column;
         position: absolute;
         top: 60px;
-        left: -100%;
-        width: 90%;
+        left: 0;
+        width: 100%;
         background-color: #000000;
-        transition: all 0.3s ease-in-out;
+        overflow: hidden;
+        transform: translateY(-30px);
+        opacity: 0;
+        pointer-events: none;
+        transition: transform 0.4s ease, opacity 0.4s ease;
     }
 
     .content,
@@ -276,11 +280,27 @@ footer {
 
 
     header nav ul.show {
-        left: 0;
+        max-height: 500px !important; /* Ajuste conforme a quantidade de itens no menu */
+        margin-top: 20px;
+        transform: translateY(0);
+        opacity: 1;
+        pointer-events: all;
     }
 
     .hamburger {
         display: flex;
+    }
+
+    .hamburger div {
+        width: 30px;
+        height: 3px;
+        background-color: white;
+        margin: 4px;
+        transition: all 0.3s ease-in-out;
+        border-radius: 20%;
+        padding: 2px;
+        margin-left: 10px;
+        margin-right: 10px;
     }
 
     .account-container {
