--- a/public/style/chat.css
+++ b/public/style/chat.css
@@ -89,7 +89,8 @@ header nav ul li a:hover {
     text-align: center;
     color: white;
     font-family: "Exo 2", serif;
-    margin-bottom: 50vh;
+    margin-bottom: 25vh;
+    margin-top: 25vh;
 }
 
 .intro h1, .intro p {
@@ -122,97 +123,17 @@ header nav ul li a:hover {
     justify-content: center;
     align-items: center;
     padding: 20px 10%;
-    margin-top: 16%;
+    margin-top: 5%;
 }
 
 .content p {
     font-size: 1.5rem;
     text-align: center;
-    margin-top: 6%;
+    margin-top: 3%;
+    margin-bottom: 0px;
     color: white;
     font-family: "Exo 2", serif;
 }
-
-
-.cadastro-form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 20px 10%;
-    margin-top: 12%;
-}
-
-.form-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 20px 5%;
-    background-color: #1b1b1b;
-    border-radius: 20px;
-    margin-bottom: 10%;
-    width: 50%;
-}
-
-.form-container h2 {
-    color: white;
-    margin-bottom: 20px;
-}
-
-.form-container input {
-    width: 100%;
-    padding: 10px;
-    margin: 10px 0;
-    border: none;
-    border-radius: 5px;
-    background-color: #333;
-    color: white;
-}
-
-
-.form-container input:focus {
-    background-color: #9d9d9d;
-    color: #333;
-    border-radius: 11px;
-    outline: none;
-
-}
-
-
-.button-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-}
-
-.form-container button {
-    width: 25%;
-    padding: 10px;
-    margin: 10px 0;
-    border: none;
-    border-radius: 5px;
-    background-color: #ffdf61;
-    color: #333;
-    font-weight: bold;
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
-}
-
-.form-container button:hover {
-    background-color: #333;
-    color: #ffdf61;
-    border-radius: 25px;
-}
-
-.form-container label {
-    color: rgb(177, 177, 177);
-    margin: 15px;
-    margin-bottom: 0;
-    width: 100%;
-}
-
 
 footer {
     display: flex;
@@ -222,6 +143,7 @@ footer {
     padding: 20px 10%;
     color: rgba(179, 179, 179, 0.344);
     transition: all 0.3s ease-in-out;
+    margin-top: 10vh;
 }
 
 .social-medias {
@@ -274,23 +196,23 @@ footer {
 
 /* Estilos para o container do chat */
 .chat-container {
-    max-width: 600px;
+    max-width: 700px;
     margin: 0 auto;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 10px;
-    background-color: #f9f9f9;
+    background-color: #0d0d0d;
 }
 
 /* Estilos para a caixa de chat */
 .chat-box {
-    height: 300px;
+    height: 350px;
     overflow-y: auto;
     border: 1px solid #ddd;
     border-radius: 5px;
     padding: 10px;
     margin-bottom: 10px;
-    background-color: #fff;
+    background-color: #000000;
 }
 
 /* Estilos para cada mensagem no chat */
@@ -298,7 +220,8 @@ footer {
     margin-bottom: 10px;
     padding: 8px;
     border-radius: 5px;
-    background-color: #e1f5fe;
+    background-color: #464646;
+    color: #ccc;
 }
 
 /* Estilos para o container de entrada */
@@ -315,6 +238,8 @@ footer {
     border-radius: 5px;
     resize: none;
     font-family: Arial, sans-serif;
+    background-color: #000000;
+    color: #ddd;
 }
 
 /* Estilos para o botão de enviar */
@@ -327,6 +252,14 @@ footer {
     cursor: pointer;
     font-size: 16px;
 }
+
+.img-send {
+    width: 20px;
+    height: 20px;
+    margin: 0 10px;
+    transition: all 0.3s ease-in-out;
+}
+
 
 #send-button:hover {
     background-color: #0056b3;
